--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -40,9 +40,7 @@ web:
             expires: 5m
 
             # The front-controller script to send non-static requests to.
-            passthru: '/router.php'
-            index:
-                - index.php
+            passthru: '/index.php'
 
             # Deny access to static files in this location.
             allow: false
