--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,11 +1,15 @@
+# This file describes an application. You can have multiple applications
+# in the same project.
+#
+# See https://docs.platform.sh/user_guide/reference/platform-app-yaml.html
+
 # The name of this app. Must be unique within a project.
 name: 'app'
 
-# The type key specifies the language and version for your application.
+# The runtime the application uses.
 type: 'php:5.6'
 
-# On PHP, there are multiple build flavors available. Pretty much everyone except
-# Drupal 7 users will want the composer flavor.
+# Configuration of the build of this application.
 build:
     flavor: drupal
 
@@ -18,12 +22,13 @@ dependencies:
 #
 # The left-hand side is the name of the relationship as it will be exposed
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
-# side is in the form `:`.
+# side is in the form `<service name>:<endpoint name>`.
 relationships:
     database: 'mysqldb:mysql'
 
 # The configuration of app when it is exposed to the web.
 web:
+    # Specific parameters for different URL prefixes.
     locations:
         '/':
             # The folder from which to serve static assets, for this location.
@@ -39,7 +44,10 @@ web:
             # 365 days).
             expires: 5m
 
-            # The front-controller script to send non-static requests to.
+            # Whether to forward disallowed and missing resources from this
+            # location to the application.
+            #
+            # Can be true, false or a URI path string.
             passthru: '/index.php'
 
             # Deny access to static files in this location.
@@ -67,16 +75,15 @@ web:
 
             rules:
                 # Provide a longer TTL (2 weeks) for aggregated CSS and JS files.
-                '^/sites/default/files/(css|jss)':
+                '^/sites/default/files/(css|js)':
                     expires: 2w
-
 
 # The size of the persistent disk of the application (in MB).
 disk: 2048
 
 # The mounts that will be performed when the package is deployed.
 mounts:
-    '/sites/default/files': 'shared:files/files'
+    '/public_html/sites/default/files': 'shared:files/files'
     '/tmp': 'shared:files/tmp'
     '/private': 'shared:files/private'
     '/drush-backups': 'shared:files/drush-backups'
@@ -85,10 +92,11 @@ mounts:
 hooks:
     # We run deploy hook after your application has been deployed and started.
     deploy: |
-        drush --yes updatedb
+      cd public_html
+      drush --yes updatedb
 
 # The configuration of scheduled execution.
 crons:
     drupal:
         spec: '*/20 * * * *'
-        cmd: 'drush core-cron'
+        cmd: 'cd public_html; drush core-cron'
